[workspace]
members = [
    "crates/bundler-types",
    "crates/bundler-config", 
    "crates/bundler-core",
    "crates/bundler-cli",
    "crates/bundler-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Solana Bundler Team"]
repository = "https://github.com/your-org/solana-bundler"
description = "Production-ready Solana transaction bundler with low latency and high success rate"

[workspace.dependencies]
# Solana dependencies
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"

# HTTP and web
axum = { version = "0.7", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Metrics
prometheus = "0.13"
metrics = "0.22"
metrics-prometheus = "0.6"

# Configuration
config = "0.14"
toml = "0.8"

# Cryptography and security
ring = "0.17"
hmac = "0.12"
sha2 = "0.10"

# AWS KMS (optional)
aws-config = "1.0"
aws-sdk-kms = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
backoff = "0.4"

# Testing
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
debug = true
opt-level = 1

# SPL Token dependencies
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Benchmark dependencies
criterion = { version = "0.5", features = ["html_reports"] }
async-trait = "0.1"
bs58 = "0.5"

# Benchmark configuration is defined in individual crates

# Dev dependencies are defined in individual crates

# Test configuration
[workspace.metadata.cargo-udeps.ignore]
normal = ["criterion"]

# Deny configuration for security
[workspace.metadata.cargo-deny.bans]
multiple-versions = "deny"
wildcards = "deny"

[workspace.metadata.cargo-deny.licenses]
allow = ["MIT", "Apache-2.0", "BSD-3-Clause", "ISC", "Unicode-DFS-2016"]
deny = ["GPL-2.0", "GPL-3.0", "AGPL-3.0"]

[workspace.metadata.cargo-deny.advisories]
db-path = "~/.cargo/advisory-db"
db-urls = ["https://github.com/rustsec/advisory-db"]
vulnerability = "deny"
unmaintained = "warn"
yanked = "warn"
notice = "warn"

# Documentation configuration
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
