[package]
name = "bundler-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bundler_benchmarks"
harness = false
path = "bundler_benchmarks.rs"

[dependencies]
bundler-types = { path = "../crates/bundler-types" }
bundler-config = { path = "../crates/bundler-config" }
bundler-core = { path = "../crates/bundler-core" }

criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
solana-sdk = "1.18"
