[package]
name = "bundler-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration management for the Solana transaction bundler"

[dependencies]
bundler-types = { path = "../bundler-types" }
serde.workspace = true
serde_json.workspace = true
config.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
solana-sdk.workspace = true
solana-system-program.workspace = true
solana-compute-budget-instruction.workspace = true
tracing.workspace = true
num_cpus = "1.16"

[dev-dependencies]
tempfile.workspace = true
