[package]
name = "bundler-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core bundling logic and RPC client for the Solana transaction bundler"

[dependencies]
bundler-types = { path = "../bundler-types" }
bundler-config = { path = "../bundler-config" }

# Solana dependencies
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-account-decoder.workspace = true
solana-commitment-config.workspace = true
solana-address-lookup-table-interface.workspace = true
solana-compute-budget-instruction.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# HTTP client
reqwest.workspace = true
hyper.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
base64.workspace = true

# Cryptography
ring.workspace = true
hmac.workspace = true
sha2.workspace = true

# AWS KMS
aws-config.workspace = true
aws-sdk-kms.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
backoff.workspace = true
bs58.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true

# Metrics
metrics.workspace = true

[dev-dependencies]
mockall.workspace = true
wiremock.workspace = true
tempfile.workspace = true
tokio-test = "0.4"
async-trait = "0.1"
bs58 = "0.5"
