[package]
name = "bundler-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP service for the Solana transaction bundler"

[[bin]]
name = "bundler-service"
path = "src/main.rs"

[dependencies]
bundler-types = { path = "../bundler-types" }
bundler-config = { path = "../bundler-config" }
bundler-core = { path = "../bundler-core" }

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
base64.workspace = true
solana-sdk.workspace = true
chrono.workspace = true
tower.workspace = true
tower-http.workspace = true
solana-transaction-status.workspace = true

[dev-dependencies]
axum-test = "15.0"
