[package]
name = "bundler-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and data structures for the Solana transaction bundler"

[dependencies]
solana-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
base64.workspace = true

[dev-dependencies]
serde_json.workspace = true
